--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,19 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <VideoView
+            android:visibility="gone"
+            android:id="@+id/videoView"
+            android:layout_width="wrap_content"
+            android:layout_height="300dp" />
+
         <com.vlc.lib.VlcVideoView
             android:id="@+id/player"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="300dp" />
 
         <com.google.android.exoplayer2.ui.PlayerView
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:id="@+id/simple_player" />
